--- a/sources/www/index.html
+++ b/sources/www/index.html
@@ -30,9 +30,11 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/functions.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
