--- a/sources/www/index.html
+++ b/sources/www/index.html
@@ -29,14 +29,12 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/functions.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" onload="loader()">
+  <div id="astuce-container">
+      <div id="astuces">
+      </div>
+    </div>
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
@@ -51,4 +49,9 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
+    <script src="js/functions.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/loader.js"></script>
 </html>
