--- a/sources/www/index.html
+++ b/sources/www/index.html
@@ -49,6 +49,7 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
