--- a/sources/www/index.html
+++ b/sources/www/index.html
@@ -56,4 +56,5 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/loader.js"></script>
+    <script src="js/firebase.js"></script>
 </html>
