--- a/sources/www/index.html
+++ b/sources/www/index.html
@@ -51,7 +51,7 @@
 
     <ion-nav-view></ion-nav-view>
   </body>
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script src="js/firebase.min.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
